Add more config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,7 @@ set -g visual-activity on
 # Center the window list
 set -g status-justify centre
 set -g status-right-length 85
-#set -g status-right "#(gcloud config get-value project) #(/bin/bash $HOME/.tmux/kube.tmux blue yellow red)"
+set -g status-right "#(gcloud config get-value project) #(/bin/bash $HOME/.tmux/kube.tmux blue yellow red)"
 #set -g status-right "#(gcloud config get-value project)"
 
 #set-option -g status-bg colour235 #base02
@@ -26,8 +26,8 @@ set -g status-right-length 85
 #set-option -g status-attr dim
 set-option -g status-style bg=colour235,fg=yellow
 
-set -g status-left-length 85
-set -g status-left "#[fg=colour198]: #h : #[fg=yellow] #(ifconfig eno1 | grep 'inet ' | awk '{print \"\" $2}') "
+#set -g status-left-length 85
+#set -g status-left "#[fg=colour198]: #h : #[fg=yellow] #(ifconfig eno1 | grep 'inet ' | awk '{print \"\" $2}') "
 
 unbind r
 bind r source-file ~/.tmux.conf\; display "Reloaded"
@@ -88,3 +88,14 @@ set -g focus-events on
 set -g bell-action none
 
 set-option -ga terminal-overrides ",xterm*:Tc"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
+
+set -g @catppuccin_flavour 'frappe'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
